# transf-imp

./: .gitignore  extract_info_whitebox.py  generate_aes.sh  logging.conf  pyproject.toml  reformat_runs.sh  run_evaluation_pgd.py  run_imperceptibility.py  test_imperceptibility.sh
configs/: inception.yaml  resnet50.yaml  vgg16.yaml
configs/transferability-n100/: pgd_inceptionv3_eps1.yaml  pgd_inceptionv3_eps2.yaml  pgd_inceptionv3_eps3.yaml  pgd_inceptionv3_eps4.yaml  pgd_resnet50_eps1.yaml  pgd_resnet50_eps2.yaml  pgd_resnet50_eps3.yaml  pgd_resnet50_eps4.yaml  pgd_vgg16_eps1.yaml  pgd_vgg16_eps2.yaml  pgd_vgg16_eps3.yaml  pgd_vgg16_eps4.yaml
configs/transferability-nformula/: pgd_inceptionv3_eps1.yaml  pgd_inceptionv3_eps2.yaml  pgd_inceptionv3_eps3.yaml  pgd_inceptionv3_eps4.yaml  pgd_resnet50_eps1.yaml  pgd_resnet50_eps2.yaml  pgd_resnet50_eps3.yaml  pgd_resnet50_eps4.yaml  pgd_vgg16_eps1.yaml  pgd_vgg16_eps2.yaml  pgd_vgg16_eps3.yaml  pgd_vgg16_eps4.yaml
explore_transf/: explore_transf.Rmd
src/: run_transferability.py  test_transferability.sh
src/utils/: args.py  configuration.py  data.py  io.py  model.py
